Basic GUI + event handlers
- added a textbox + button for dialing a number, dropdown for dial type
- added event handlers for keyup and keydown, dial and dial type

ToneMixer:
- added a master volume gain node
- created setter for gain values

--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 	<script src='./bluebox.js'></script>
+
+	GUI forthcoming! Enter a number to dial or press the number keys!
+
+	<form>
+		<input type='text' id='number'></input>
+		<button type='button' id='dial'>Dial</button>
+	  <select id='dialType' class="target">
+	    <option value="Keypad" selected="selected">Keypad</option>
+	    <option value="Rotary">Rotary</option>
+	  </select>
+	</form>
+
 </head>
 </body>
 </html>
