--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<div class='keypad-container'>
 		
 		<div class='keypad'>
-			<input type='text' id='number' class='fullwidth bubble'></input>
+			<input type='text' id='number' class='fullwidth bubble selectable'></input>
 			<div class='key'>1</div>
 			<div class='key'>2</div>
 			<div class='key'>3</div>			<!--<div class='key'>A</div>	-->	
