--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<meta name="viewport" content="width=device-width">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 	<script src='./bluebox.js'></script>
@@ -23,7 +25,7 @@
 	<div class='keypad-container'>
 		
 		<div class='keypad'>
-			<input type='text' id='number' class='fullwidth bubble selectable'></input>
+			<input type='text' id='number' placeholder="Type number here" class='fullwidth bubble selectable'></input>
 			<div class='key'>1</div>
 			<div class='key'>2</div>
 			<div class='key'>3</div>			<!--<div class='key'>A</div>	-->	
