--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<div class='keypad-container'>
 		
 		<div class='keypad'>
-			<input type='text' id='number' placeholder="Type number here" class='fullwidth bubble selectable'></input>
+			<input type='text' id='number' placeholder="Type number here" class='full-width bubble selectable'></input>
 			<div class='key'>1</div>
 			<div class='key'>2</div>
 			<div class='key'>3</div>			<!--<div class='key'>A</div>	-->	
@@ -40,7 +40,8 @@
 			<div class='key'>*</div>
 			<div class='key'>0</div>
 			<div class='key'>-</div>			<!--<div class='key'>D</div>	-->	
-			<div class='key fullwidth' value='+'>+</div>
+			<div id='mode' class='key' >Play</div>
+			<div class='key two-third-width'>+</div>
 
 		</div>
 		<div class='side'>
