Added jconsole listener for mobile denugging

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="viewport" content="width=device-width"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+<script src="https://jsconsole.com/js/remote.js?80b260f1-bdc9-436c-9afa-304eacf00586"></script>
 	<script src='./bluebox.js'></script>
 	<link rel="stylesheet" href="layout.css">
 	<!--GUI forthcoming! Enter a number to dial or press the number keys!
