--- a/index.html
+++ b/index.html
@@ -25,33 +25,36 @@
 		
 		<div class='keypad'>
 			<input type='text' id='number' placeholder="Type number here" class='full-width bubble selectable'></input>
+												<div id='dial' class='key'>Dial</div>
+
 			<div class='key'>1</div>
 			<div class='key'>2</div>
-			<div class='key'>3</div>			<!--<div class='key'>A</div>	-->	
+			<div class='key'>3</div>			<div class='key'>A</div>
 
 			<div class='key'>4</div>
 			<div class='key'>5</div>
-			<div class='key'>6</div> 			<!-- <div class='key'>B</div>		-->
+			<div class='key'>6</div> 			<div class='key'>B</div>
 
 			<div class='key'>7</div>
 			<div class='key'>8</div>
-			<div class='key'>9</div> 			<!--<div class='key'>C</div>		-->
+			<div class='key'>9</div> 			<div class='key'>C</div>
 
 			<div class='key'>*</div>
 			<div class='key'>0</div>
-			<div class='key'>-</div>			<!--<div class='key'>D</div>	-->	
+			<div class='key'>-</div>			<div class='key'>D</div>
 			<div id='mode' class='key' >Play</div>
-			<div class='key two-third-width'>+</div>
+			<div class='key two-thirds-width'>+</div>
+												<div id='dialType' class='key'>DTMF</div>
 
 		</div>
-		<div class='side'>
+		<!--<div class='side'>
 			<div id='dial' class='key'>Dial</div>
 			<div class='key'>A</div>
 			<div class='key'>B</div>
 			<div class='key'>C</div>
 			<div class='key'>D</div>			
 			<div id='dialType' class='key'>MF</div>
-	</div>
+	</div> -->
 	</div>		
 
 </head>
